Fix voor niet werkende links door CSS z-index.

--- a/portfolio-m-maas-s6/src/scss/components/BannerText.scss
+++ b/portfolio-m-maas-s6/src/scss/components/BannerText.scss
@@ -2,9 +2,10 @@
     width: 100%;
     height: fit-content;
     position: relative;
-    justify-items: end;
+    justify-items: center;
     display: grid;
     grid-auto-columns: auto;
+    //z-index: 99;
   }
 
   .Banner_container_background_shadow {
@@ -16,19 +17,20 @@
     background-size: 10px 10px;
     background-position: 0 0, 5px 5px;
     background-repeat: repeat;
-    height: 100%;
-    width: 100%;
+    height: 102%;
+    width: 102%;
     top: 8px;
     right: 5px;
 }
 
 .Banner_container_background_outline{
     border: 8px solid;
-    height: 98%;
+    height: 100%;
     width: 99%;
     background-color: white;
     display: flex;
     flex-direction: column;
+    position: relative;
 } 
 
 
