--- a/portfolio-m-maas-s6/src/scss/views/AboutView.scss
+++ b/portfolio-m-maas-s6/src/scss/views/AboutView.scss
@@ -19,24 +19,32 @@
 
 
   .scrollVerder_button__parent{
+    display: flex;
+    flex-direction: row;
     position: relative;
-    cursor: pointer;
-    place-self: start start;
+    justify-self: flex-start;
+    margin-left: 5px;
+    margin-top: -8px;
+    //z-index: -2;
   }
   
   .scrollVerder_button__parent_background{
     position: absolute;
-    height: 115px;
-    width: 290px;
-    z-index: 3;
-    top: 0;
-    left: -4px;
+    z-index: -99;
     background-color: white;
     background-image: radial-gradient(black 30%, transparent 11%),
         radial-gradient(black 30%, transparent 11%);
     background-size: 10px 10px;
     background-position: 0 0, 5px 5px;
     background-repeat: repeat;
+    top: 8px;
+    left: -4px;
+    height: 100%;
+    width: 100%;
+    @include media-breakpoint-up(xl){
+    height: 140%;
+    width: 120%;
+    }
   }
   
   .scrollVerder_button__child{
@@ -45,8 +53,8 @@
     white-space: nowrap;
     position: absolute;
     z-index: 5;
-    top: -18px;
-    left: 7px;
+    top: 0px;
+    left: 0px;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -54,15 +62,25 @@
     transition: all .15s linear .15s;
     width: fit-content;
     height: fit-content;
-    &:hover{
-      top: 0;
-      left: 0;
+    transition: all .15s linear .15s;
+    &:hover {
+        transform: scale(1.1) !important;
     }
 
     p{
       color: white;
-      padding: 32px;
-      font-size: 32px;
+      font-size: 24px;
+      padding: 16px;
+        @include media-breakpoint-up(md){
+            font-size: 32px;
+        }
+        @include media-breakpoint-up(xl){
+        padding: 32px;
+        font-size: 48px;
+        }
+        @include media-breakpoint-up(xxxl){
+            font-size: 56px;
+        }
     }
   }
   .scrollVerder_button__child_left{
@@ -77,38 +95,36 @@
   }  
 
 .avatar_container {
-  grid-column: 3/5;
-  @include media-breakpoint-up(md){
-  grid-column: 5/9;
-  }
-  @include media-breakpoint-up(lg){ 
-    grid-column: 9/12;
-  }
-    width: 100%;
-    height: fit-content;
-    //background-color: green;
-}
-
-.avatar_IMG{
-  width: auto;
-  height: 90vh;
-  margin-left: 150px;
-  margin-top: -100px;
-  //position: absolute;
-}
-
-.abs-position {
   position:absolute;
+  top: 128px;
   right: -80px;
-  left: 1700px;
   overflow: hidden;
+  z-index: -99;
+  @include media-breakpoint-up(lg){
+    position: relative; 
+    grid-column: 8/12;
+    right: -50px;
+    overflow: visible;
+  }
+
 }
-.abs-content {
-  width: 200px;
+.avatar_IMG {
+  width: 255px;
+  @include media-breakpoint-up(lg){
+    width: 100%;
+  }
+}
+
+.overflowHidden{
+  overflow: hidden;
+  position: relative;
+  @include media-breakpoint-up(lg){
+    overflow: visible;
+  }
 }
 
 .journalistiek_IMG_container{
-  grid-column: 1/6;
+  grid-column: 1/5;
 
   img{
     width: 100%;
@@ -118,8 +134,13 @@
 
 
 .ICT_IMG_container{
+  grid-column: 1/5;
+  @include media-breakpoint-up(sm){
+  grid-column: 5/9;
+  }
+  @include media-breakpoint-up(lg){
   grid-column: 9/13;
-
+  }
   img{
     width: 100%;
     height: auto;
@@ -127,7 +148,7 @@
 }
 
 .Stage_IMG_container{
-  grid-column: 1/6;
+  grid-column: 1/5;
 
   img{
     width: 100%;
@@ -200,8 +221,13 @@
   
 }
 .Goudpot_IMG_container{
+  grid-column: 1/5;
+  @include media-breakpoint-up(lg){
+    grid-column: 2/8;
+  }
+  @include media-breakpoint-up(lg){
   grid-column: 5/9;
-
+  } 
   img{
     width: 100%;
     height: auto;
@@ -260,7 +286,13 @@
 }
 
 .Specs_banner {
+  grid-column: 1/5;
+  @include media-breakpoint-up(sm){
+    grid-column: 1/9 ;
+    }
+  @include media-breakpoint-up(lg){
   grid-column: 4/10 ;
+  }
 }
 
 .about__background{
@@ -269,7 +301,7 @@
   background-repeat: no-repeat;
   background-size: 5% auto;
   background-position: center 50px;
-  z-index: -99;
+  z-index: 99;
   background-image: url("assets/PortfolioLijnMobile.svg");
   @include media-breakpoint-up(md){
       background-size: 100% auto;
